refactor(*): rename variables like 'isLoading' to 'loading'

--- a/src/app/features/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
+++ b/src/app/features/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
@@ -15,12 +15,12 @@
     </mat-error>
   </mat-form-field>
 
-  <button mat-raised-button color="primary" (click)="resetPassword()" *ngIf="!isLoading" @inOutRight
-    [@.disabled]="!isLoading">
+  <button mat-raised-button color="primary" (click)="resetPassword()" *ngIf="!loading" @inOutRight
+    [@.disabled]="!loading">
     Restablecer contraseña
     <mat-icon class="fs-medium">send</mat-icon>
   </button>
-  <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
+  <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
 
   <button mat-flat-button mat-dialog-close>
     Cancelar
