--- a/src/app/features/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/features/posts/pages/posts-list/posts-list.component.html
@@ -10,7 +10,7 @@
     ></app-post-filters-card>
     <app-post-paginated-list
         [pageResults]="pageResults"
-        [isLoading]="isLoading"
+        [loading]="loading"
         [authUser]="authUser"
         [currentFilters]="currentFilters"
         [urlQueryParams]="urlQueryParams"
