--- a/src/app/features/posts/pages/user-posts/user-posts.component.html
+++ b/src/app/features/posts/pages/user-posts/user-posts.component.html
@@ -16,7 +16,7 @@
   </div>
   <app-post-paginated-list
     [pageResults]="pageResults"
-    [isLoading]="isLoading"
+    [loading]="loading"
     [authUser]="authUser"
     [currentFilters]="currentFilters"
     [urlQueryParams]="urlQueryParams"
