--- a/src/app/features/posts/components/post-paginated-list/post-paginated-list.component.html
+++ b/src/app/features/posts/components/post-paginated-list/post-paginated-list.component.html
@@ -33,20 +33,20 @@
 
   <!-- Pagination -->
   <div class="pagination flex-center-center gap-05">
-    <span class="fw-700 fs-regular" *ngIf="!isLoading && !!pageResults?.count" @inOutRight>
+    <span class="fw-700 fs-regular" *ngIf="!loading && !!pageResults?.count" @inOutRight>
       {{ pageResults?.count + (pageResults?.count === 1 ? ' resultado' : ' resultados') }}
     </span>
-    <span class="fw-700 fs-regular" *ngIf="!isLoading && !pageResults?.count" @inOutRight>
+    <span class="fw-700 fs-regular" *ngIf="!loading && !pageResults?.count" @inOutRight>
       Sin resultados
     </span>
     
     <div class="flex-center-center gap-025">
-      <button class="circle-button" (click)="previousPage()" [disabled]="!pageResults?.previous || isLoading"
+      <button class="circle-button" (click)="previousPage()" [disabled]="!pageResults?.previous || loading"
         aria-label="Pág. Anterior" matRipple>
         <mat-icon class="small-icon">navigate_before</mat-icon>
       </button>
       <button class="circle-button page-number" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar Pág."
-        matRipple [disabled]="isLoading || !posts.length">
+        matRipple [disabled]="loading || !posts.length">
         <span class="fw-700">{{ currentFilters?.page ?? 1 }}</span>
       </button>
       <mat-menu #pagesMenu>
@@ -54,7 +54,7 @@
           {{ page }}
         </button>
       </mat-menu>
-      <button class="circle-button" (click)="nextPage()" [disabled]="!pageResults?.next || isLoading"
+      <button class="circle-button" (click)="nextPage()" [disabled]="!pageResults?.next || loading"
         aria-label="Pág. Siguiente" matRipple>
         <mat-icon class="small-icon">navigate_next</mat-icon>
       </button>
@@ -63,7 +63,7 @@
 </div>
 
 <!-- Post grid -->
-<section class="posts-grid" *ngIf="!isLoading && posts.length" @fadeInOut>
+<section class="posts-grid" *ngIf="!loading && posts.length" @fadeInOut>
   <ng-container *ngFor="let post of posts; trackBy: postTrackBy">
     <app-post-card [post]="post" [urlQueryParams]="urlQueryParams ?? {}" [isOwner]="authUser?.id === post.user.id"
       (report)="report(post)" (delete)="deletePost(post)"></app-post-card>
@@ -71,12 +71,12 @@
 </section>
 
 <!-- Post shimmer grid -->
-<div class="posts-grid" *ngIf="isLoading" @fadeInOut>
+<div class="posts-grid" *ngIf="loading" @fadeInOut>
   <app-post-card-shimmer *ngFor="let post of 5|fillArray; trackBy: shimmerTrackBy"></app-post-card-shimmer>
 </div>
 
 <!-- No results -->
-<div class="flex-column flex-center-center text-center gap-05 m-t-2" *ngIf="!isLoading && !posts.length" @fadeInOut>
+<div class="flex-column flex-center-center text-center gap-05 m-t-2" *ngIf="!loading && !posts.length" @fadeInOut>
   <img class="no-results-image" src="assets/images/no-results.png" alt="Perdido en el espacio">
   <p class="fs-medium fw-700">No se han encontrado resultados</p>
   <p class="fw-700">Aún nadie ha creado una publicación con tus parámetros de búsqueda 😅</p>
