--- a/src/app/features/posts/pages/post-form/post-form.component.html
+++ b/src/app/features/posts/pages/post-form/post-form.component.html
@@ -1,11 +1,11 @@
 <main class="container">
   <div class="rounded-card w-100">
     <h1 class="fs-large m-b-05">
-      {{ !isEditForm ? 'Crear publicación' : 'Editar publicación' }}
+      {{ !editForm ? 'Crear publicación' : 'Editar publicación' }}
     </h1>
 
     <!-- Form shimmer -->
-    <div class="flex-column gap-1 w-100" *ngIf="isPostDataLoading">
+    <div class="flex-column gap-1 w-100" *ngIf="loadingPost">
       <div class="shimmer-input-form grow-1"></div>
       <div class="shimmer-input-form grow-1">
         <mat-icon class="shimmer-text-color">expand_more</mat-icon>
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <form [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!isPostDataLoading">
+    <form [formGroup]="form" (ngSubmit)="save($event)" *ngIf="!loadingPost">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Título</mat-label>
         <input matInput placeholder="Título" formControlName="title">
@@ -36,7 +36,7 @@
         <mat-label>Nivel académico</mat-label>
         <mat-select formControlName="academicLevel">
           <mat-option>
-            <ngx-mat-select-search [searching]="isAcademicLevelsLoading" [formControl]="searchAcademicLevel"
+            <ngx-mat-select-search [searching]="loadingAcademicLevels" [formControl]="searchAcademicLevel"
               placeholderLabel="Buscar nivel académico" noEntriesFoundLabel="No se encontraron resultados">
             </ngx-mat-select-search>
           </mat-option>
@@ -51,7 +51,7 @@
         <mat-label>Eje</mat-label>
         <mat-select formControlName="axis">
           <mat-option>
-            <ngx-mat-select-search [searching]="isAxesLoading" [formControl]="searchAxis" placeholderLabel="Buscar axis"
+            <ngx-mat-select-search [searching]="loadingAxes" [formControl]="searchAxis" placeholderLabel="Buscar axis"
               noEntriesFoundLabel="No se encontraron resultados">
             </ngx-mat-select-search>
           </mat-option>
@@ -79,27 +79,27 @@
       </mat-form-field>
 
       <div class="flex-end-center">
-        <button type="submit" mat-raised-button color="primary" [disabled]="isPostDataLoading" *ngIf="!isLoading && !isEditForm" @inOutRight [@.disabled]="!isLoading">
+        <button type="submit" mat-raised-button color="primary" [disabled]="loadingPost" *ngIf="!loading && !editForm" @inOutRight [@.disabled]="!loading">
           <span class="m-r-05">Publicar</span>
           <mat-icon class="fs-medium">send</mat-icon>
         </button>
-        <button type="submit" mat-raised-button color="primary" [disabled]="isPostDataLoading" *ngIf="!isLoading && isEditForm" @inOutRight [@.disabled]="!isLoading">
+        <button type="submit" mat-raised-button color="primary" [disabled]="loadingPost" *ngIf="!loading && editForm" @inOutRight [@.disabled]="!loading">
           <span class="m-r-05">Guardar</span>
           <mat-icon class="fs-medium">save</mat-icon>
         </button>
-        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
+        <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
       </div>
     </form>
   </div>
 
   <!-- Upload File -->
   <div class="rounded-card grow-1 right-card min-w-0">
-    <h2 class="fs-medium" *ngIf="isEditForm">Archivos</h2>
+    <h2 class="fs-medium" *ngIf="editForm">Archivos</h2>
 
     <div class="upload-area flex-column flex-center-center gap-1" appDragAndDropFile
       (fileDropped)="onFileDroped($event)"
       [ngClass]="{'upload-area_invalid': this.form.controls.files.invalid && this.form.controls.files.touched}"
-      *ngIf="!isEditForm">
+      *ngIf="!editForm">
       <h2 class="text-blue-dark"
         [ngClass]="{'text-red': this.form.controls.files.invalid && this.form.controls.files.touched}">Arrastra los
         archivos aquí</h2>
@@ -135,7 +135,7 @@
             aria-label="Descargar">
             <mat-icon class="text-blue-dark">file_download</mat-icon>
           </a>
-          <button *ngIf="!isEditForm" (click)="removeFile(i)" mat-icon-button aria-label="Remover">
+          <button *ngIf="!editForm" (click)="removeFile(i)" mat-icon-button aria-label="Remover">
             <mat-icon class="text-blue-dark">delete</mat-icon>
           </button>
         </div>
@@ -146,7 +146,7 @@
     </div>
 
     <!-- File list shimmer -->
-    <div *ngIf="isPostDataLoading">
+    <div *ngIf="loadingPost">
       <div class="shimmer-text-regular w-70 m-t-05"></div>
       <div class="flex-center-center gap-025 w-100">
         <div class="shimmer-text-large grow-1"></div>
