--- a/src/app/core/components/main-layout/main-layout.component.html
+++ b/src/app/core/components/main-layout/main-layout.component.html
@@ -1,13 +1,10 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
-        <app-navbar id="navbar"></app-navbar>
-        <div class="content">
-            <router-outlet></router-outlet>
-        </div>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
-    <mat-sidenav mode="over" [(opened)]="isOpened" [autoFocus]="false" [fixedInViewport]="true">
+    <mat-sidenav mode="over" [(opened)]="navbarOpen" [autoFocus]="false" [fixedInViewport]="true">
         <ng-container [ngSwitch]="component">
-            <app-navigation-sidenav *ngSwitchCase="sidenavComponent.NAVIGATION_SIDENAV"></app-navigation-sidenav>
+            <!-- <app-navigation-sidenav *ngSwitchCase="sidenavComponent.NAVIGATION_SIDENAV"></app-navigation-sidenav> -->
         </ng-container>
     </mat-sidenav>
 </mat-sidenav-container>
