--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,6 @@
-// Material custom theme
-@import './assets/styles/material/material-theme';
-
-@import './assets/styles/index';
-
-body {
-    margin: 0;
-    font-family: 'Manrope', sans-serif;
-    font-size: var(--fs-regular);
-}
+@import './assets/styles/reset';
+@import './assets/styles/components/components';
+@import './assets/styles/colors';
+@import './assets/styles/typography';
+@import './assets/styles/display';
+@import './assets/styles/util';
