feat(homepage, navbar): Add new homepage and navbar

--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -1,1 +1,27 @@
-<h1>Homepage</h1>
+<section
+    class="banner container bg-primary txt-on-primary flex-col flex-center-center gap-1 p-y-3">
+    <div class="banner__text flex-col gap-1">
+        <h1 class="ft-display">Busca y comparte planificaciones de enseñanza media</h1>
+        <a href="" class="banner__action-button rounded-button bg-on-primary txt-primary ft-title">Ver planificaciones</a>
+    </div>
+    <img class="banner__image" src="../../../../assets/images/college-project-cuate.png" alt="Ilustracion de trabajo en equipo">
+</section>
+
+<section class="banner container bg-on-primary txt-primary flex-col flex-center-center gap-1 p-y-3">
+    <img class="banner__image" src="../../../../assets/images/web-search-cuate.png" alt="Ilustracion de busqueda">
+    <div class="banner__text flex-col gap-1">
+        <h2 class="ft-headline">Descarga gratis los recursos subidos por la comunidad o visualizalos sin descargarlos</h2>
+        <div class="flex-center-center gap-05 flew-wrap">
+            <span class="rounded-button bg-green txt-on-green">Excel</span>
+            <span class="rounded-button bg-blue txt-on-blue">Word</span>
+            <span class="rounded-button bg-red txt-on-red">PDF</span>
+            <span class="rounded-button bg-orange txt-on-orange">Power points</span>
+            <span class="rounded-button bg-purple txt-on-purple">Imágenes</span>
+        </div>
+    </div>
+</section>
+
+<footer class="container bg-primary txt-on-primary">
+    <p><a class="a-style-none" href=""><small>Creador: Nicolás Bustamante</small></a></p>
+    <p><a class="a-style-none" href="https://storyset.com/online"><small>Ilustraciones: Online illustrations by Storyset</small></a></p>
+</footer>
