--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,4 @@
 @import './assets/styles/typography';
 @import './assets/styles/display';
 @import './assets/styles/util';
+@import './assets/styles/box-model';
