--- a/src/app/core/components/main-layout/main-layout.component.html
+++ b/src/app/core/components/main-layout/main-layout.component.html
@@ -1,10 +1,2 @@
-<mat-sidenav-container>
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-    <mat-sidenav mode="over" [(opened)]="navbarOpen" [autoFocus]="false" [fixedInViewport]="true">
-        <ng-container [ngSwitch]="component">
-            <!-- <app-navigation-sidenav *ngSwitchCase="sidenavComponent.NAVIGATION_SIDENAV"></app-navigation-sidenav> -->
-        </ng-container>
-    </mat-sidenav>
-</mat-sidenav-container>
+<app-navbar class="navbar"></app-navbar>
+<router-outlet></router-outlet>
