--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,70 +1,27 @@
-<header class="header">
-  <div class="container">
-
-    <!-- Mobile navbar -->
-    <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop" aria-label="Menú">
-      <mat-icon>menu</mat-icon>
-    </button>
-
-    <a class="logo fs-large fw-800 text-blue-dark" matRipple [routerLink]="['/']">
-      <img src="/assets/icons/icon-72x72.png" alt="Ícono de Planishare">
-      <span>Plansihare</span>
-    </a>
-
-    <a mat-icon-button *ngIf="!isDesktop" [routerLink]="['/posts/list']" aria-level="Buscar">
-      <mat-icon>search</mat-icon>
-    </a>
-
-    <!-- Desktop navbar -->
-    <nav *ngIf="isDesktop">
-      <ul class="navbar__list fs-regular fw-700">
-        <li *ngIf="!authUser">
-          <a class="rounded-button" matRipple [routerLink]="['/auth/register']" routerLinkActive="active">
-            <mat-icon>person_add</mat-icon>
-            <span>Registrarse</span>
-          </a>
-        </li>
-        <li *ngIf="!authUser">
-          <a class="rounded-button" matRipple [routerLink]="['/auth/login']" routerLinkActive="active">
-            <mat-icon>login</mat-icon>
-            <span>Iniciar Sesión</span>
-          </a>
-        </li>
-        <li *ngIf="authUser">
-          <a class="rounded-button" matRipple [routerLink]="['/posts/user', authUser.id]"
-            routerLinkActive="active">
-            <mat-icon>description</mat-icon>
-            <span>Mis publicaciones</span>
-          </a>
-        </li>
-        <li *ngIf="authUser">
-          <a class="rounded-button" matRipple [routerLink]="['/posts/create']" routerLinkActive="active">
-            <mat-icon>control_point</mat-icon>
-            <span>Crear publicación</span>
-          </a>
-        </li>
-        <li>
-          <a class="rounded-button" matRipple [routerLink]="['/posts/list']" routerLinkActive="active">
-            <mat-icon>search</mat-icon>
-            <span>Buscar</span>
-          </a>
-        </li>
-        <li *ngIf="authUser">
-          <button class="circle-button" matRipple [matMenuTriggerFor]="menu" aria-label="Menu de perfil">
-            <mat-icon class="fw-300">person</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="['/user/edit-profile']">
-              <mat-icon>person</mat-icon>
-              <span>Mi perfil</span>
-            </button>
-            <button mat-menu-item (click)="logout()">
-              <mat-icon>logout</mat-icon>
-              <span>Cerrar sesión</span>
-            </button>
-          </mat-menu>
-        </li>
-      </ul>
-    </nav>
-  </div>
+<header class="header bg-primary txt-on-primary container flex-between-center gap-1 p-y-1">
+  <a class="a-style-none ft-medium" routerLink="/">Planishare</a>
+  <button class="button-style-none toggle-nav" (click)="navOpen = !navOpen" *ngIf="(desktop|async)===false">
+    <svg *ngIf="!navOpen" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <path d="M4 8l16 0" />
+      <path d="M4 16l16 0" />
+    </svg>
+    <svg *ngIf="navOpen" class="txt-primary" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <path d="M18 6l-12 12"></path>
+      <path d="M6 6l12 12"></path>
+   </svg>
+  </button>
+  <nav class="nav container p-y-3 bg-on-primary txt-primary" [ngClass]="{'open': navOpen}">
+    <ul class="ul-style-none flex-col flex-start-center gap-1">
+      <li><a class="a-style-none ft-medium" href="">Registrarse</a></li>
+      <li><a class="a-style-none ft-medium" href="">Iniciar sesión</a></li>
+      <li><a class="a-style-none ft-medium" href="">Mi perfil</a></li>
+      <li><a class="a-style-none ft-medium" href="">Mis publicaciones</a></li>
+      <li><a class="a-style-none ft-medium" href="">Crear publicación</a></li>
+      <li><a class="rounded-button w-fit-content m-x-auto ft-medium"
+        [ngClass]="(desktop|async) ? 'bg-on-primary txt-primary' : 'bg-primary txt-on-primary'"
+        href="">Ver planificaciones</a></li>
+    </ul>
+  </nav>
 </header>
