--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,56 +1,34 @@
-.header {
-    background-color: hsl(var(--clr-white-old));
-}
+.nav {
+    position: absolute;
+    top: -200vh;
+    left: 0;
+    height: 100vh;
+    height: 100dvh;
+    width: 100%;
+    text-align: center;
+    transition: top linear .2s;
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    max-width: calc(90rem - 16px);
-    padding-inline: calc(min(5%, 2rem) - 16px);
-}
-
-.logo {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: .3em;
-    border-radius: 100px;
-    padding-inline: .5em;
-
-    img {
-        max-height: var(--fs-large);
+    &.open {
+        top: 0;
     }
 }
 
-.navbar__list {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: .5rem 0;
-    gap: .5rem;
+.toggle-nav {
+    z-index: 2;
 }
 
-.rounded-button {
-    --bg-color: transparent;
-    --text-color: hsl(var(--clr-grey-dark));
-    --p-x: 1.25em;
-    --p-y: .3em;
-    border: 2px solid hsl(var(--clr-grey-dark));
-}
+@media (min-width: 64rem) {
+    .nav {
+        position: unset;
+        height: unset;
+        width: unset;
+        background-color: unset;
+        color: var(--clr-on-primary);
+        padding: unset;
 
-.rounded-button,
-.circle-button {
-    transition: transform .07s ease-in;
-}
-
-.rounded-button:hover,
-.circle-button:hover {
-    transform: scale(1.025);
-}
-
-.active {
-    --bg-color: hsl(var(--clr-grey-dark));
-    --text-color: hsl(var(--clr-white));
+        ul {
+            flex-direction: row;
+            align-items: center;
+        }
+    }
 }
