--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -13,13 +13,13 @@
    </svg>
   </button>
   <nav class="nav container p-y-3 bg-on-primary txt-primary" [ngClass]="{'open': navOpen}">
-    <ul class="ul-style-none flex-col flex-start-center gap-1">
-      <li><a class="a-style-none ft-medium" href="">Registrarse</a></li>
-      <li><a class="a-style-none ft-medium" href="">Iniciar sesión</a></li>
-      <li><a class="a-style-none ft-medium" href="">Mi perfil</a></li>
-      <li><a class="a-style-none ft-medium" href="">Mis publicaciones</a></li>
-      <li><a class="a-style-none ft-medium" href="">Crear publicación</a></li>
-      <li><a class="rounded-button w-fit-content m-x-auto ft-medium"
+    <ul class="ul-style-none flex-col flex-start-center gap-1" [ngClass]="(desktop|async) ? 'ft-medium' : 'ft-headline'">
+      <li><a class="a-style-none" href="">Registrarse</a></li>
+      <li><a class="a-style-none" href="">Iniciar sesión</a></li>
+      <li><a class="a-style-none" href="">Mi perfil</a></li>
+      <li><a class="a-style-none" href="">Mis publicaciones</a></li>
+      <li><a class="a-style-none" href="">Crear publicación</a></li>
+      <li><a class="rounded-button w-fit-content m-x-auto"
         [ngClass]="(desktop|async) ? 'bg-on-primary txt-primary' : 'bg-primary txt-on-primary'"
         href="">Ver planificaciones</a></li>
     </ul>
