--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 :root {
-    --font-family-sans-serif-1: 'Manrope', sans-serif;
+    --font-family-sans-serif-1: 'Poppins', sans-serif;
 }
 
 body {
