refactor(window-resize): Rename public behavior subjects

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <main class="container m-b-2 h-100 grid-center-center">
   <div class="login-card rounded-card flex-column-center">
-    <img class="max-h-10" src="/assets/icons/icon-72x72.png" alt="Ícono de Planishare" *ngIf="(windowResize.isDesktop$)|async">
+    <img class="max-h-10" src="/assets/icons/icon-72x72.png" alt="Ícono de Planishare" *ngIf="(windowResize.desktop$)|async">
     <h1 class="fs-x-large">Iniciar sesión</h1>
     <p class="fw-500 text-center">Que bueno tenerte de vuelta 🙌</p>
 
