--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <main class="container m-b-2 h-100 grid-center-center">
   <div class="register-card rounded-card flex-column-center">
-    <img class="max-h-10" src="/assets/icons/icon-72x72.png" alt="Ícono de Planishare" *ngIf="(windowResize.isDesktop$)|async">
+    <img class="max-h-10" src="/assets/icons/icon-72x72.png" alt="Ícono de Planishare" *ngIf="(windowResize.desktop$)|async">
     <h1 class="fs-x-large">Registrarse</h1>
     <p class="fw-500 text-center">Registrate para dar me gusta a publicaciones y subir planificaciones 🙌</p>
 
