--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,7 +1,7 @@
 :root {
     --clr-primary: #0D533B;
     --clr-on-primary: #FFF4DE;
-    --clr-secondary: #dc5c36;
+    --clr-secondary: #533A71;
     --clr-on-secondary: #FFFFFF;
 
     --clr-primary-container: #F7F0F8;
