--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
+@import './assets/styles/material/material-theme';
 @import './assets/styles/reset';
 @import './assets/styles/components/components';
+@import './assets/styles/directives/loading-button';
 @import './assets/styles/colors';
 @import './assets/styles/typography';
 @import './assets/styles/display';
 @import './assets/styles/util';
 @import './assets/styles/box-model';
+@import './assets/styles/misc';
