feat(material): Change dialog color

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -5,7 +5,7 @@
 
   <section class="card flex-col flex-start-center gap-1 text-center ft-body w-100">
     <div>
-      <h1 class="txt-secondary ft-headline">Iniciar sesión</h1>
+      <h1 class="txt-secondary ft-title">Iniciar sesión</h1>
       <p>Que bueno verte de nuevo 🙌</p>
     </div>
 
