--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './assets/styles/material/material-theme';
+@import './assets/styles/material/overloads';
 @import './assets/styles/reset';
 @import './assets/styles/components/components';
 @import './assets/styles/directives/loading-button';
