--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -1,5 +1,6 @@
 .card {
-    background-color: var(--clr-background);
+    // background-color: var(--clr-background);
+    background-color: #FFFFFF;
     padding: 1rem;
     border-radius: 20px;
     box-shadow: var(--shadow-md);
