fix(login): Add unsubscriber

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -54,6 +54,12 @@
       </button>
     </form>
 
+    <div class="flex-center-center gap-05">
+      <mat-divider class="w-100"></mat-divider>
+      <span>o</span>
+      <mat-divider class="w-100"></mat-divider>
+    </div>
+
     <div class="flex-col gap-1">
       <button appLoadingButton [loading]="loadingGoogle"
         class="rounded-button shadow-md w-100 bg-primary-container txt-on-primary-container"
