--- a/src/app/pages/auth/register/register.component.scss
+++ b/src/app/pages/auth/register/register.component.scss
@@ -1,5 +1,16 @@
-@media (min-width: 48rem) {
-    .register-card {
-        max-width: 480px;
+main.container {
+    min-height: calc(100vh);
+    min-height: calc(100dvh);
+}
+
+.section-image {
+    max-width: 570px;
+    width: 100%;
+}
+
+@media(min-width: 64rem)  {
+    main.container {
+        min-height: calc(100vh - 72px);
+        min-height: calc(100dvh - 72px);
     }
 }
