feat(fotgot-password-dialog): Add new styles

--- a/src/app/pages/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
+++ b/src/app/pages/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
@@ -1,28 +1,26 @@
-<h1 class="fs-large">¿Olvidaste tu contraseña? 😅</h1>
-<div mat-dialog-content>
-  <p class="m-y-1">Te enviaremos un email con un enlace para que puedas restablecerla 📫</p>
+<h1 class="ft-title">¿Olvidaste tu contraseña? 😅</h1>
+<div class="ft-body m-y-05">
+  <p>Te enviaremos un email con un enlace para que puedas restablecerla 📫</p>
   <p>Recuerda revisar spam!</p>
 </div>
-<div mat-dialog-actions class="flex-end-center gap-025">
-  <mat-form-field appearance="outline" class="w-100">
-    <mat-label>Email</mat-label>
-    <input type="email" matInput [formControl]="email">
-    <mat-error *ngIf="email.invalid && email.errors!['required']">
-      Debes ingresar tu email
-    </mat-error>
-    <mat-error *ngIf="email.invalid && email.errors!['email']">
-      Debes ingresar tu email válido
-    </mat-error>
-  </mat-form-field>
-
-  <button mat-raised-button color="primary" (click)="resetPassword()" *ngIf="!loading" @inOutRight
-    [@.disabled]="!loading">
+<mat-form-field appearance="outline" class="w-100 ft-body">
+  <mat-label>Email</mat-label>
+  <input type="email" matInput [formControl]="email">
+  <mat-error *ngIf="email.invalid && email.errors!['required']">
+    Debes ingresar tu email
+  </mat-error>
+  <mat-error *ngIf="email.invalid && email.errors!['email']">
+    Debes ingresar tu email válido
+  </mat-error>
+</mat-form-field>
+<div class="action-buttons flex-col gap-05 ft-body">
+  <button appLoadingButton [loading]="loading"
+  (click)="resetPassword()"
+  class="rounded-button bg-secondary txt-on-secondary">
     Restablecer contraseña
-    <mat-icon class="fs-medium">send</mat-icon>
   </button>
-  <div class="shapes-loader" *ngIf="loading" @inOutLeft></div>
 
-  <button mat-flat-button mat-dialog-close>
+  <button mat-dialog-close class="rounded-button">
     Cancelar
   </button>
 </div>
