--- a/src/assets/styles/_box-model.scss
+++ b/src/assets/styles/_box-model.scss
@@ -15,6 +15,10 @@
 .m-t-1 {
     margin-top: 1rem;
 }
+
+.m-y-05 {
+    margin-block: .5rem;
+}
 // Width
 .w-fit-content {
     width: fit-content;
