--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -44,16 +44,10 @@
 //     opacity: .9;
 // }
 
-// // Material dialogs
-// .mat-dialog-container {
-//     border-radius: 15px !important;
-// }
-
-// @media (min-width: 48rem) {
-//     .mat-dialog-container {
-//         border-radius: 18px !important;
-//     }
-// }
+// Material dialogs
+.mat-dialog-container {
+    border-radius: 15px !important;
+}
 
 // Dialog pannelClasses
 .default-dialog {
