feat(navbar): Add active link styles

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -14,14 +14,36 @@
   </button>
   <nav class="nav container p-y-3 bg-on-primary txt-primary" [ngClass]="{'open': navOpen}">
     <ul class="ul-style-none flex-col flex-start-center gap-1" [ngClass]="(desktop$|async) ? 'ft-body' : 'ft-headline'">
-      <li><a class="a-style-none" routerLink="/auth/register" (click)="navOpen=false">Registrarse</a></li>
-      <li><a class="a-style-none" routerLink="/auth/login" (click)="navOpen=false">Iniciar sesión</a></li>
-      <li><a class="a-style-none" href="" (click)="navOpen=false">Mi perfil</a></li>
-      <li><a class="a-style-none" href="" (click)="navOpen=false">Mis publicaciones</a></li>
-      <li><a class="a-style-none" href="" (click)="navOpen=false">Crear publicación</a></li>
-      <li><a class="rounded-button w-fit-content m-x-auto"
+      <li><a
+        class="nav-link a-style-none"
+        routerLink="/auth/register"
+        routerLinkActive="active"
+        (click)="navOpen=false">Registrarse</a></li>
+      <li><a
+        class="nav-link a-style-none"
+        routerLink="/auth/login"
+        routerLinkActive="active"
+        (click)="navOpen=false">Iniciar sesión</a></li>
+      <li><a
+        class="nav-link a-style-none"
+        routerLink="/user/profile"
+        routerLinkActive="active"
+        (click)="navOpen=false">Mi perfil</a></li>
+      <li><a
+        class="nav-link a-style-none"
+        routerLink="/user/posts"
+        routerLinkActive="active"
+        (click)="navOpen=false">Mis publicaciones</a></li>
+      <li><a
+        class="nav-link a-style-none"
+        routerLink="/posts/create"
+        routerLinkActive="active"
+        (click)="navOpen=false">Crear publicación</a></li>
+      <li><a
+        class="rounded-button w-fit-content m-x-auto"
         [ngClass]="(desktop$|async) ? 'bg-on-primary txt-primary' : 'bg-primary txt-on-primary'"
-        href="" (click)="navOpen=false">Ver planificaciones</a></li>
+        routerLink="/posts"
+        (click)="navOpen=false">Ver planificaciones</a></li>
     </ul>
   </nav>
 </header>
