--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -30,6 +30,22 @@
         ul {
             flex-direction: row;
             align-items: center;
+
+            .nav-link::after {
+                content: '';
+                display: block;
+                width: 1%;
+                height: 2px;
+                transition-property: background-color, width;
+                transition-duration: .08s, .15s;
+                transition-timing-function: ease-in;
+            }
+
+            .nav-link:hover::after,
+            .nav-link.active::after {
+                width: 100%;
+                background-color: var(--clr-on-primary);
+            }
         }
     }
 }
