fix(navbar, homepage): Fix mobile styles

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
         routerLinkActive="active"
         (click)="navOpen=false">Crear publicación</a></li>
       <li><a
-        class="rounded-button w-fit-content m-x-auto"
+        class="rounded-button"
         [ngClass]="(desktop$|async) ? 'bg-on-primary txt-primary' : 'bg-primary txt-on-primary'"
         routerLink="/posts"
         (click)="navOpen=false">Ver planificaciones</a></li>
