--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -11,7 +11,7 @@
     <img class="banner__image" src="../../../../assets/images/web-search-cuate.png" alt="Ilustracion de busqueda">
     <div class="banner__text flex-col gap-1">
         <h2 class="ft-headline">Descarga gratis los recursos subidos por la comunidad o visualizalos sin descargarlos</h2>
-        <div class="flex-center-center gap-05 flew-wrap">
+        <div class="flex-center-center gap-05 flex-wrap">
             <span class="rounded-button bg-green txt-on-green">Excel</span>
             <span class="rounded-button bg-blue txt-on-blue">Word</span>
             <span class="rounded-button bg-red txt-on-red">PDF</span>
