feat(posts): Add new logic in PostListComponent

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <section class="card flex-col flex-start-center gap-1 text-center ft-body w-100">
-    <div>
+    <div class="flex-col gap-05">
       <h1 class="txt-secondary ft-title">Iniciar sesión</h1>
       <p>Que bueno verte de nuevo 🙌</p>
     </div>
