--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <section class="card flex-col flex-start-center gap-1 text-center ft-body w-100">
-    <div>
+    <div class="flex-col gap-05">
       <h1 class="txt-secondary ft-title">Registrarse</h1>
       <p>Registrate para dar me gusta y subir planificaciones 🙌</p>
     </div>
