--- a/src/app/pages/homepage/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage/homepage.component.html
@@ -2,7 +2,7 @@
     class="banner container bg-primary txt-on-primary flex-col flex-center-center gap-1 p-y-3">
     <div class="banner__text flex-col gap-1">
         <h1 class="ft-display">Busca y comparte planificaciones de enseñanza media</h1>
-        <a href="" class="banner__action-button rounded-button bg-on-primary txt-primary ft-title">Ver planificaciones</a>
+        <a routerLink="/posts" class="banner__action-button rounded-button bg-on-primary txt-primary ft-title">Ver planificaciones</a>
     </div>
     <img class="banner__image" src="../../../../assets/images/college-project-cuate.png" alt="Ilustracion de trabajo en equipo">
 </section>
