--- a/src/app/pages/posts/pages/user-posts/user-posts.component.html
+++ b/src/app/pages/posts/pages/user-posts/user-posts.component.html
@@ -1,4 +1,4 @@
-<main class="container-row">
+<!-- <main class="container-row">
   <div class="left-side w-100">
     <app-user-posts-stats
       class="m-b-1"
@@ -24,4 +24,4 @@
     (removeFilter)="removeFilter = { value: $event }">
   </app-post-paginated-list>
 </main>
-<app-scroll-to-top-button></app-scroll-to-top-button>
+<app-scroll-to-top-button></app-scroll-to-top-button> -->
