--- a/src/app/pages/posts/pages/user-posts/user-posts.component.scss
+++ b/src/app/pages/posts/pages/user-posts/user-posts.component.scss
@@ -1,16 +1,16 @@
-.container-row {
-    padding-bottom: 1.5rem;
-}
+// .container-row {
+//     padding-bottom: 1.5rem;
+// }
 
-@media (min-width: 64rem) {
-    .container-row {
-        flex-wrap: nowrap;
-    }
+// @media (min-width: 64rem) {
+//     .container-row {
+//         flex-wrap: nowrap;
+//     }
 
-    .left-side {
-        align-self: flex-start;
-        max-width: 320px;
-        position: static;
-        top: 70px;
-    }
-}
+//     .left-side {
+//         align-self: flex-start;
+//         max-width: 320px;
+//         position: static;
+//         top: 70px;
+//     }
+// }
