--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -1,21 +1,3 @@
-<main class="container-row">
-    <app-post-filters-card
-        class="post-filters-card w-100"
-        [urlQueryParams]="urlQueryParams"
-        [academicLevels]="(academicLevels$ | async) ?? []"
-        [subjectWithAxis]="(subjectWithAxes$ | async) ?? []"
-        [removeFilter]="removeFilter"
-        [changePage]="changePage"
-        (filtersChange)="getPosts($event)"
-    ></app-post-filters-card>
-    <app-post-paginated-list
-        [pageResults]="pageResults"
-        [loading]="loading"
-        [authUser]="authUser"
-        [currentFilters]="currentFilters"
-        [urlQueryParams]="urlQueryParams"
-        (changePage)="changePage = { value: $event }"
-        (removeFilter)="removeFilter = { value: $event }"
-    ></app-post-paginated-list>
+<main class="container">
+    <app-posts-grid [posts]="(posts|async)"></app-posts-grid>
 </main>
-<app-scroll-to-top-button></app-scroll-to-top-button>
