feat(collapsable-filters): Add new filter component

--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -6,4 +6,8 @@
         (changePage)="changePage($event)">
     </app-paginated-filter-status>
     <app-posts-grid [posts]="posts" [loading]="loading"></app-posts-grid>
+    <app-collapsable-filters
+        [filtersOptions]="filtersOptions"
+        [loading]="filtersLoading">
+    </app-collapsable-filters>
 </main>
